# idac

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
docs/: architecture-cleanup-plan.md  development.md
docs/issues/: idac-license-healthcheck.md
fixtures/: README.md
fixtures/idb/: handler_hierarchy.i64  handler_hierarchy_stripped.i64  tiny.i64  tiny_stripped.i64
fixtures/scripts/: build_handler_hierarchy.sh  build_tiny.sh  make_handler_hierarchy_idbs.sh  make_idbs.sh
fixtures/src/: handler_hierarchy.cpp  handler_hierarchy.hpp  tiny.c
scripts/: install_ida_plugin.sh
src/idac/: __init__.py  cli.py  docs.py  doctor.py  metadata.py  output.py  paths.py  workspace.py
src/idac/cli2/: argparse_utils.py  batch.py  context.py  errors.py  execute.py  invocation.py  main.py  path_resolution.py  preview.py  result.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  helpers.py  test_bridge.py  test_bundled_assets.py  test_cli.py  test_cli2_request_builders.py  test_comments_atomic.py  test_dispatch.py  test_doctor.py  test_gui_transport.py  test_gui_transport_live.py  test_helpers.py  test_idalib_backend.py  test_idalib_batch.py  test_idalib_binary_workflow.py  test_idalib_bookmarks.py  test_idalib_classes.py  test_idalib_ctree.py  test_idalib_function_inspection_search.py  test_idalib_locals.py  test_idalib_name_locals_semantics.py  test_idalib_proto_comments.py  test_idalib_reads.py  test_idalib_reanalyze_python.py  test_idalib_struct_enum_semantics.py  test_idalib_types.py  test_installers.py  test_operation_registry.py  test_ops_helpers.py  test_output.py  test_output_limits.py  test_paths.py  test_plugin_entry.py  test_plugin_package.py  test_preview.py  test_regressions.py  test_renderers.py  test_search_bytes.py  (+4 more)
(+82 files in other folders)
